@@ -90,6 +90,10 @@ The class can be set-up and run like a normal MDAnalysis analysis class::
 The VMD surface created by the class updates the pore for each frame of the trajectory.
 Use it as normal by loading your trajectory in VMD and sourcing the file in the Tk Console.
 
+You can access the actual profiles generated in the ``results`` attribute::
+
+    print(ha.results.profiles)
+
 Again, HOLE writes out files for each frame. If you would like to delete these files
 after the analysis, you can call :meth:`~HoleAnalysis.delete_temporary_files`::
 
@@ -513,13 +517,48 @@ class HoleAnalysis(AnalysisBase):
         Files are called `hole.inp`.
 
 
-    Returns
-    -------
-    dict
+    Attributes
+    ----------
+    results.sphpdbs: numpy.ndarray
+        Array of sphpdb filenames
+
+        .. versionadded:: 2.0.0
+
+    results.outfiles: numpy.ndarray
+        Arrau of output filenames
+
+        .. versionadded:: 2.0.0
+
+    results.profiles: dict
+        Profiles generated by HOLE2.
         A dictionary of :class:`numpy.recarray`\ s, indexed by frame.
 
+        .. versionadded:: 2.0.0
+
+    sphpdbs: numpy.ndarray
+        Alias of :attr:`results.sphpdbs`
+
+        .. deprecated:: 2.0.0
+            This will be removed in MDAnalysis 3.0.0. Please use
+            :attr:`results.sphpdbs` instead.
+
+    outfiles: numpy.ndarray
+        Alias of :attr:`results.outfiles`
+
+        .. deprecated:: 2.0.0
+            This will be removed in MDAnalysis 3.0.0. Please use
+            :attr:`results.outfiles` instead.
+
+    profiles: dict
+        Alias of :attr:`results.profiles`
+
+        .. deprecated:: 2.0.0
+            This will be removed in MDAnalysis 3.0.0. Please use
+            :attr:`results.profiles` instead.
 
     .. versionadded:: 1.0
+
+
 
     """
 
@@ -551,11 +590,6 @@ class HoleAnalysis(AnalysisBase):
         """)
 
     _guess_cpoint = False
-
-    sphpdbs = None
-    outfiles = None
-    frames = None
-    profiles = None
 
     def __init__(self, universe,
                  select='protein',
@@ -680,13 +714,36 @@ class HoleAnalysis(AnalysisBase):
         return super(HoleAnalysis, self).run(start=start, stop=stop,
                                              step=step, verbose=verbose)
 
+    @property
+    def sphpdbs(self):
+        wmsg = ("The `sphpdbs` attribute was deprecated in "
+                "MDAnalysis 2.0.0 and will be removed in MDAnalysis 3.0.0. "
+                "Please use `results.sphpdbs` instead.")
+        warnings.warn(wmsg, DeprecationWarning)
+        return self.results.sphpdbs
+
+    @property
+    def outfiles(self):
+        wmsg = ("The `outfiles` attribute was deprecated in "
+                "MDAnalysis 2.0.0 and will be removed in MDAnalysis 3.0.0. "
+                "Please use `results.outfiles` instead.")
+        warnings.warn(wmsg, DeprecationWarning)
+        return self.results.outfiles
+
+    @property
+    def profiles(self):
+        wmsg = ("The `profiles` attribute was deprecated in "
+                "MDAnalysis 2.0.0 and will be removed in MDAnalysis 3.0.0. "
+                "Please use `results.profiles` instead.")
+        warnings.warn(wmsg, DeprecationWarning)
+        return self.results.profiles
+
     def _prepare(self):
         """Set up containers and generate input file text"""
         # set up containers
-        self.sphpdbs = np.zeros(self.n_frames, dtype=object)
-        self.outfiles = np.zeros(self.n_frames, dtype=object)
-        self.frames = np.zeros(self.n_frames, dtype=int)
-        self.profiles = {}
+        self.results.sphpdbs = np.zeros(self.n_frames, dtype=object)
+        self.results.outfiles = np.zeros(self.n_frames, dtype=object)
+        self.results.profiles = {}
 
         # generate input file
         body = set_up_hole_input('',
@@ -733,7 +790,6 @@ class HoleAnalysis(AnalysisBase):
             self.tmp_files.append(sphpdb)
         else:
             self.tmp_files.append(sphpdb + '.old')
-        self.frames[i] = frame
 
         # temp pdb
         logger.info('HOLE analysis frame {}'.format(frame))
@@ -763,7 +819,7 @@ class HoleAnalysis(AnalysisBase):
 
         recarrays = collect_hole(outfile=outfile)
         try:
-            self.profiles[frame] = recarrays[0]
+            self.results.profiles[frame] = recarrays[0]
         except KeyError:
             msg = 'No profile found in HOLE output. Output level: {}'
             logger.info(msg.format(self.output_level))
@@ -821,11 +877,12 @@ class HoleAnalysis(AnalysisBase):
             ``filename`` with the pore surfaces.
 
         """
-        if self.sphpdbs is None or len(self.sphpdbs) == 0:
+        if not np.any(self.results.get("sphpdbs", [])):
             raise ValueError('No sphpdb files to read. Try calling run()')
 
         frames = []
-        for i, sphpdb in zip(self.frames, self.sphpdbs[self.frames]):
+        for i in self.frames:
+            sphpdb = self.results.sphpdbs[i]
             tmp_tri = create_vmd_surface(sphpdb=sphpdb,
                                          sph_process=self.exe['sph_process'],
                                          sos_triangle=self.exe['sos_triangle'],
@@ -870,15 +927,10 @@ class HoleAnalysis(AnalysisBase):
 
     def min_radius(self):
         """Return the minimum radius over all profiles as a function of q"""
-        if not self.profiles:
+        profiles = self.results.get("profiles")
+        if not profiles:
             raise ValueError('No profiles available. Try calling run()')
-        return np.array([[q, p.radius.min()] for q, p in self.profiles.items()])
-
-    def min_radius(self):
-        """Return the minimum radius over all profiles as a function of q"""
-        if not self.profiles:
-            raise ValueError('No profiles available. Try calling run()')
-        return np.array([[q, p.radius.min()] for q, p in self.profiles.items()])
+        return np.array([[q, p.radius.min()] for q, p in profiles.items()])
 
     def delete_temporary_files(self):
         """Delete temporary files"""
@@ -888,8 +940,8 @@ class HoleAnalysis(AnalysisBase):
             except OSError:
                 pass
         self.tmp_files = []
-        self.outfiles = []
-        self.sphpdbs = []
+        self.results.outfiles = []
+        self.results.sphpdbs = []
 
     def __enter__(self):
         return self
@@ -987,17 +1039,17 @@ class HoleAnalysis(AnalysisBase):
 
         """
 
-        if not self.profiles:
+        if not self.results.get("profiles"):
             raise ValueError('No profiles available. Try calling run()')
 
         if ax is None:
             fig, ax = plt.subplots()
 
-        fcl = self._process_plot_kwargs(frames=frames,
-                                        color=color, cmap=cmap, linestyle=linestyle)
+        fcl = self._process_plot_kwargs(frames=frames, color=color,
+                                        cmap=cmap, linestyle=linestyle)
 
         for i, (frame, c, ls) in enumerate(zip(*fcl)):
-            profile = self.profiles[frame]
+            profile = self.results.profiles[frame]
             dy = i*y_shift
             ax.plot(profile.rxn_coord, profile.radius+dy, color=c,
                     linestyle=ls, zorder=-frame, label=str(frame),
@@ -1051,7 +1103,7 @@ class HoleAnalysis(AnalysisBase):
 
         """
 
-        if not self.profiles:
+        if not self.results.get("profiles"):
             raise ValueError('No profiles available. Try calling run()')
 
         from mpl_toolkits.mplot3d import Axes3D
@@ -1065,7 +1117,7 @@ class HoleAnalysis(AnalysisBase):
                                         linestyle=linestyle)
 
         for frame, c, ls in zip(*fcl):
-            profile = self.profiles[frame]
+            profile = self.results.profiles[frame]
             if r_max is None:
                 radius = profile.radius
                 rxn_coord = profile.rxn_coord
@@ -1104,7 +1156,7 @@ class HoleAnalysis(AnalysisBase):
             sorted dictionary of {order_parameter:profile}
 
         """
-        if not self.profiles:
+        if not self.results.get("profiles"):
             raise ValueError('No profiles available. Try calling run()')
         if isinstance(order_parameters, str):
             try:
@@ -1137,7 +1189,7 @@ class HoleAnalysis(AnalysisBase):
 
         profiles = OrderedDict()
         for frame in sorted_frames:
-            profiles[order_parameters[frame]] = self.profiles[frame]
+            profiles[order_parameters[frame]] = self.results.profiles[frame]
 
         return profiles
 
@@ -1220,7 +1272,7 @@ class HoleAnalysis(AnalysisBase):
         if frames is None:
             frames = self.frames
         frames = util.asiterable(frames)
-        profiles = [self.profiles[k] for k in frames]
+        profiles = [self.results.profiles[k] for k in frames]
 
         rxncoords = [p.rxn_coord for p in profiles]
         radii = [p.radius for p in profiles]
